<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BaseActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/title_Discover"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/title_hiddencode"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/footer_developedby"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btnLearnToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dip"
        android:background="@drawable/button_default_background"
        android:clickable="true"
        android:padding="20dip"
        android:text="@string/btntext_learntoplay"
        android:textColor="#2753ff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnStartNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLearnToPlay"
        android:layout_alignRight="@+id/btnLearnToPlay"
        android:layout_below="@+id/btnLearnToPlay"
        android:layout_marginTop="25dip"
        android:background="@drawable/button_default_background"
        android:gravity="center"
        android:padding="20dip"
        android:text="@string/btntext_startnow"
        android:textColor="#2753ff"
        android:textStyle="bold" />

</RelativeLayout>